# ChangeLog for dev-db/sqlite
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.537 2014/11/02 08:51:55 ago Exp $

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> sqlite-3.8.6.ebuild:
  Stable for alpha, wrt bug #523484

  29 Oct 2014; Agostino Sarubbo <ago@gentoo.org> sqlite-3.8.6.ebuild:
  Stable for sparc, wrt bug #523484

  28 Oct 2014; Agostino Sarubbo <ago@gentoo.org> sqlite-3.8.6.ebuild:
  Stable for ia64, wrt bug #523484

*sqlite-3.8.7 (18 Oct 2014)

  18 Oct 2014; Mike Gilbert <floppym@gentoo.org> +sqlite-3.8.7.ebuild:
  Version bump. Ebuild by Arfrever.

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> sqlite-3.8.6.ebuild:
  Stable for x86, wrt bug #523484

  09 Oct 2014; Agostino Sarubbo <ago@gentoo.org> sqlite-3.8.6.ebuild:
  Stable for amd64, wrt bug #523484

  04 Oct 2014; Anthony G. Basile <blueness@gentoo.org> sqlite-3.8.6.ebuild:
  Stable on ppc and ppc64, bug #523484

  04 Oct 2014; Markus Meier <maekke@gentoo.org> sqlite-3.8.6.ebuild:
  arm stable, bug #523484

  23 Sep 2014; Jeroen Roovers <jer@gentoo.org> sqlite-3.8.6.ebuild:
  Stable for HPPA (bug #523484).

*sqlite-3.8.6 (16 Aug 2014)

  16 Aug 2014; Mike Gilbert <floppym@gentoo.org> +sqlite-3.8.6.ebuild:
  Version bump. Ebuild by Arfrever.

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> sqlite-3.8.5.ebuild:
  x86 stable wrt bug #518610

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> sqlite-2.8.16-r5.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  09 Aug 2014; Markus Meier <maekke@gentoo.org> sqlite-3.8.5.ebuild:
  arm stable, bug #518610

  05 Aug 2014; Jeroen Roovers <jer@gentoo.org> sqlite-3.8.5.ebuild:
  Stable for HPPA (bug #518610).

  22 Jul 2014; Pacho Ramos <pacho@gentoo.org> sqlite-3.8.4.3.ebuild:
  amd64/x86 stable, bug #512452

  18 Jul 2014; Matt Turner <mattst88@gentoo.org> sqlite-3.8.4.3.ebuild:
  alpha stable, bug 512452.
