@@ -18,6 +18,7 @@ DIST sqlite-autoconf-3080403.tar.gz 1937379 SHA256 e0e995e23a324a5d6ae95d8a83624
 DIST sqlite-autoconf-3080500.tar.gz 1957050 SHA256 98c33abe4106e508e73fda648b2657ac9e969fe24695f543dcde68cc71f3091b SHA512 e1bb9148070dab712f305f3c1fd18419499199a77bb7b769e4f60f86c0a90e0d554fa878c161d22c2df58e7fefac5ac29b82ee0da972177f9581d296d973d7c3 WHIRLPOOL 4f333c9e55961c645cd058d6dbd9126ddd3d1d2b3fee4ecef830213112678d99bce40004d2eb869aeb1cfebecc5dce6817a5aae66d66e9e24edb5916fa498f8b
 DIST sqlite-autoconf-3080600.tar.gz 1968379 SHA256 53bab14255bc16c3d73fdbe54b364c1764709d68dda167587f8026c98b9f4e95 SHA512 71cb9427c7d05bcd33b7585824bbcfe6b15b379b6c914eba1ec33c7517be158ee43a7f890db55463b811ec90d8a6b15f12336acba70ba01b39b33ff11a411890 WHIRLPOOL 5287cc6a662ad0655c2c8837653402ca2fdf2835e947b65122861ac7282053627b2b3eee7967fa2bdc30ff32d3f3f9812c4957bfa999e9c39e267f3aca9eb65c
 DIST sqlite-autoconf-3080700.tar.gz 1998217 SHA256 d0b42377fb59ea8dfe690334af04505e34e60e6875058a01aebd2502ac63d4ae SHA512 32aafa679e4a1c2f504e69f58fec8824c478defcaefe66bfe2e42a223ddc9c02b07ae4ccb9b497773829cb92fdf90b159ff368b3c20a53a7494fb1eaa4a94265 WHIRLPOOL 82ae1c031c31b26ce7177d329ef7a17462f04a7df2b76f3397923f06860ad9406ad09985d3a541d9764cb16ff9ff759dfbc31c057c73860738defeb9ac4329cb
+DIST sqlite-autoconf-3080701.tar.gz 1998389 SHA256 9d2854bec7b26dfe9aceb1faa17d40674daa15a23bbab67018191ffbe0339533 SHA512 97caaed40600f2831b5d9807f0f4c802ef4dcaa638febf1f6bfa4ce0a16d6c57325e9bccb1f95bdcc5e7c5f473b59f317d6d7773f22ecf3ae157bf1964ac1c39 WHIRLPOOL 704546eb7e45ce671f293056f44378d880a08f27600d57a48a6188069dee584830b271f04900d70d6c73e489b6b5367d4ecd1e281d6d7bacbc7da06adff4e81d
 DIST sqlite-doc-3080200.zip 4272848 SHA256 384aa6735bd10e561820c4c61e7fd25f6b2416663f201151f31162741b868603 SHA512 b96de0be9ac2f7bbbe198c6b5ccf6b283aebe6d38533efdc384f20051b5a6c98bed6dadd13d2cc83f114200c15ea432e20d3e0aadf7f7000f618622f389efb8a WHIRLPOOL 348b7046a8111269e32f9e8023710c7f74401f6fc997396cd4853e1e4c804f26029d688b15333970f56d1a7404ab2cfdbeabe23a504974ea79a347408b8cba6d
 DIST sqlite-doc-3080300.zip 4600279 SHA256 5bf632eba7f9ce324dd9b345448cc7875e6ee081c9df2f7d7dd2fb3c0fb02a23 SHA512 cf48c6c6cf0e2513cb8f43387d4ff5328f039f951ba10fdd3f41d2d179e879f79039edfb1e0d5655b7555eff0e4bbb74c1de196fa8a51634a0ca1ad2909b62ef WHIRLPOOL 04cf870fce40759c1c66fa2f323e7d54c8e80fdc5c0bf55f8e3f4f7f317bcf72316b322065287559718e1a3af56c8bda11a17e4783d3b920d12c0808b169d8f4
 DIST sqlite-doc-3080301.zip 4603427 SHA256 7af07481a18e52fd1d8269c249f452650dfd380a75ac8589b52b71d6402064f5 SHA512 fe268da4ace408a1228ecfd2e93b31e60aa62f9df82d234be44c823799be19b483ebc236631e85a20ddadae502394272ff25ea9c32e15f26ca57ba92c6b42b2d WHIRLPOOL 9b66fe4c356cd6f470e9f4fd21da0d587db37d64ec9948108bd88ad3924fa08e7373193a8fd5d285e36ec11d96e7be46af1e90caddc71f754715706739cbabd1
@@ -27,6 +28,7 @@ DIST sqlite-doc-3080403.zip 4628472 SHA256 aacbcbac847168f97053518595ec1a5e23ed3
 DIST sqlite-doc-3080500.zip 4446454 SHA256 d694c49f35d93f54fc714e749ea773e0d8cf2a8eb733d19b6749c27f9604929a SHA512 19c1e8b177b4b7c708f145b289337e3cbe4bc417887fff9f9ff608b86fbf62f83bd1a5b99714c513fb36b36184c509c7383d037fcddf91719a217bcd61542f43 WHIRLPOOL 2c6c745aebc11a1d7d369aafc3c083d0ae7e5225a7af532150875c352c534d823fc54ccf223e4bfea1a4578e60df74a6aac68e3aaec187c981f796a4701bd0f2
 DIST sqlite-doc-3080600.zip 4736026 SHA256 c187ffe719e35ab03970db4d1fb4a4865ae4f8d943ceaaa79f635a51d982ca6e SHA512 58bd1a58156e0d5d19c939d7a82b756c68635fe6b7ff8ae2189dcababb2b8c80de8fdb2646da9d8ec5381a716ca73f32f12d63a2be9336091d3ebbb90cc46d54 WHIRLPOOL 6339a21065d2948e6350cae84071528cf492735b83960959cd0ace1007a0c8ab9099d4bd028bc9d02422c4a07b05f8b3246fe93b48b75ae5ddb0587db0d985c7
 DIST sqlite-doc-3080700.zip 4901008 SHA256 79126f7035ae1b32029e8943db492cf82bc617109245fa9a08ec71072122a0eb SHA512 c9d2784dff719515cf3b5a95fddb3c9738eebcfdde5a7605baf4824d01aa3215d293788b55a7d20fa645b952df53951c5e2dfab0bf5defe460ede8a6643dcb77 WHIRLPOOL 9b647a5d6c28a7c8f96883ec85fe14ceb01fb2c48dbe83283ed01ccf8821759fa00f0bb4be126be033cee5271fa47bfdaa62642698f8f35880c8a69835e4b741
+DIST sqlite-doc-3080701.zip 4909904 SHA256 d50444d9ebf4302cb8658172a34602056b65313d93ee32eba213cd7111bfc53a SHA512 cdd4244c9ffa96dfe48db81be193b052a227fea11c6eb67a1179438d03a2846814c11873d60ccb1f2f949b7a8e90bb13b52b7ccc73911b48e575e9ea77b50ce2 WHIRLPOOL 38a44b456997e2830bb529fb9d2f3cbc8e1aa5c8080862fd1694b0bcf75692a996980dcbc749700ba5bf9add8112904b9f625e97d34f9d77b51299cdcc26497e
 DIST sqlite-src-3080200.zip 5522243 SHA256 aede689b0ce255036fa3631f7794dbf639438617343503c73a9e9c518fe386cf SHA512 65969b214d88e66c9ad55d78b6a1f624eab427679f8b21dc694aa843346d7891bf267e65380222220304ecd2561138ceb236fbea619a25000f03ea89dd7b26e2 WHIRLPOOL 1fe1d1c482c025c7cc28a3822088d04d39824db0b61e56782df15dc62383ab30409302dc6fbbbd2f36c3333dc3fc7539214038cf58be8e73cc6e0b25bc11a586
 DIST sqlite-src-3080300.zip 5552384 SHA256 801af0d50c8bf0b648383a0a2c8f2b41a6d51aae9fda1ae9e64205410117c642 SHA512 f0a1fbd54e8da9fc5374b7a0a286439346c4c1753c9382f934c197f7111c5a3c0504961123691c9bea15d0058f13c53f4171735bd218fdec5922ca87606edb37 WHIRLPOOL 4123be5a67b93abde5873a218efbe1e89893b27ab455a6047425a861f368f89ac65c9eb58c49f321b4078e910b3bb30c50501607eb0dc64262f82ec5df489efb
 DIST sqlite-src-3080301.zip 5552847 SHA256 6701bf76f41cd2637081c86481a988be4284c805a5b509ce0f1a71b92c18d8cb SHA512 689601b3dfcecff05b609e4e75314ca247f2a152246ce096b855d605ccc0ddbec009b3468e7ed14bb341e2eaf1dfe9edde495d0e955f832c6817997e6bc898e6 WHIRLPOOL 762bf47a6ee45b6cca8187394475b589056d2d08125b5026c17145b00e5cdf36493d894ef0373f3d321337d65d65893f83aa15b0e99c97466b8f4a45b0d8bdf3
@@ -36,6 +38,7 @@ DIST sqlite-src-3080403.zip 5576481 SHA256 f71c8677c5492e24243d2a82fe9af1a736d19
 DIST sqlite-src-3080500.zip 5629667 SHA256 c600d494109d977d4fa924eb8b17a8051e1e0e7ec8312337d647478cf7121938 SHA512 b72c52334604c593d5a27a9d13dec69d4695f39d9ae202489ffca7b47730bb8f14e923ce230584dbf4a5918094002e4e3ae4771464a37aecb0835c96e301003c WHIRLPOOL 3543f026c4b414d101367c3d7330ad49836c64bf7c22870459b098394f1be59b50895905511403a184924f2d116e386a653e14ffb662b7452a3d18e2206408e4
 DIST sqlite-src-3080600.zip 5683499 SHA256 ffe524334ec012a27ab2d2687f35d2ed34286e2ba8f8e13dd9f1ec73ce9dce31 SHA512 92b11db11ddcd8c2e336af29b3f7c1bf39e6e2575eeca7cee20323065958b21df48316f7135757b2a9a31fb52b824064df22ce1ed44ce17ed60444d61f6620ad WHIRLPOOL fdcfda872b72a67709a2725025e06749114c0a6d62cf991e59397d43520a1147ec5356f4cd52fb94263f6fce49364a299dd6d546f7b7970866ccdade3b76b9ff
 DIST sqlite-src-3080700.zip 5751697 SHA256 dc2f064f43d0ce554e53ce6dc8b3616b0b6f7fe0b28ca8af61f72b0d3bc1a191 SHA512 682f71be7c9f8c0d5a4d04302683566350b5a8d8893a3064395ebf969fd5a679afd750abbcefe997a12c2c9e3ba93dac2202e8e63e23f5df8b113b4bbe17a334 WHIRLPOOL 08e22ba6778e4c86214afdb17f68b3569efe8de8fa9e94bab4e74c6687f572891248e3e9f8f9e1a0fb2e001d34df2cb937a1193ec07a9f1d9fc19aa2a2f24b39
+DIST sqlite-src-3080701.zip 5752291 SHA256 1bed8d029b61fd4532659a1bfbdf3621e2146bb7c5389b6aef62e8ee496bd9a9 SHA512 28e57c2e5402cd991cf63dc9b8608113454d23e8ac306f8243269773fb4b908ae28499835d7c38d84da6b6db3a7c909745081b34dbe2d360f4fdc1ef543a9562 WHIRLPOOL 914e587cf739598fbfe6f82aae4591f4332e173933fe04c57c4fbef43e06d966bc2771a013fb2b17e7c5a4bf8b79d5900af665bea0754de95f26ec16c6db758e
 EBUILD sqlite-2.8.16-r5.ebuild 2910 SHA256 690cfc49ed3711765baeb548b0ff5c064d985c5fcb5c2cb7232da14586b51faf SHA512 881d2aee7554af2c9b6caa2279e448531c733e6db1e8f3cdc9dbfd79f634f3f30bb9c2991ff8adee6a663a26a6a64658bd7efa1fb8f1e6877f61ff40b1556769 WHIRLPOOL 5e7c2abe2274bd4956e13eb326e95cf00466036583944feb4bc06f3648178d6ccbcbbc7386da099ceb1a5af94ab931e8208cb7833e0333b444962da80401fd8d
 EBUILD sqlite-3.8.2.ebuild 4932 SHA256 90d4089475dca8da4801dd3827fc60e157dbad86071399cb9da16702912bb859 SHA512 6b8b96708ab7cda8412e42222010039d5e0c2faea50e8cc97a8e3706f602b98ad402af621e0513701da30ea8c6b4074e61dbc63308398cc4deb1c5707bf6a81c WHIRLPOOL 92241f441aa5cbfe8bf453611dc20911784b287bff6092e4d7744602972b0b951e303c75b71cac8e99a1ded320d2858b76fe3f7e4618ae131c98a8e028cfd362
 EBUILD sqlite-3.8.3.1.ebuild 5204 SHA256 e4bd792aede8475d6c07a65f6cdd0cf76ff4ff75768b75d613ae5ec2bc29bb79 SHA512 72c230135a0fed43ebfb30a00737c6ec7e7e511237bcacdf54b68b6499722dd75abdd0ffab1896e64c68aa6c9a46661ae8f0c9c1809cb4f7f443025355063bfb WHIRLPOOL bf45fb1f4cec7d3d2095b1b881ddb047ee75c51a87c497965a07778f928db5219f3ba5784a98c16f1570cdc667138cb48da4fc556b09ed2ebb2a8bddb68fc963
@@ -45,23 +48,14 @@ EBUILD sqlite-3.8.4.3.ebuild 5196 SHA256 ff5802500a83216e237b671e366d023685c1b44
 EBUILD sqlite-3.8.4.ebuild 5202 SHA256 7b18bced8da815304185cf2767d8418031872b2064cf8091197269d90cd37a87 SHA512 2f3dd4eea2811c6950ea54277c13ea9d72a6d52e8287c8b044de1c0481b2ec18b5083b579682b3b9dee634695ea50e71a12cce4e3788570744478c8725e43a75 WHIRLPOOL 1f1de28933901bda513e6e67bfa1b92ef2d7b74b091f6163cb921b13599b859161088c13c45c16830e8a2561a393a1272debc9a65907f7551e895824eeec18d6
 EBUILD sqlite-3.8.5.ebuild 5202 SHA256 daa1a46c02613def39694fe97323baebcc17b8b89c4c179949c66ab3f8f5d128 SHA512 907b0f4c21087ebe1e59b91d900b05450bc4a9b5fd4e2894cc1b3fa1762facffd94f8b32479657ec003ee3a4e6cce390b07fc9923fe6bccfcd7e4b9a7a88b2be WHIRLPOOL 88fa010bab358192c2b1653693e1c9fe62801ce97b8aa09a9dc6ef37d392f9c8ff0daa070a912c90e5ef3e1df4332fedcb380df39224a198b6c540664fa24e08
 EBUILD sqlite-3.8.6.ebuild 5123 SHA256 be02cb805b25183281aaa38d0986526f1e1322793ddcaab9c49085b2568ae910 SHA512 54fa24bfd7cd94f63e7fa0e458c9fbc697044ba7818fa2cb8073329257adfc6283582cc214e140520c867af7fdeed387f695bca07293af1194fb4517e20e8a55 WHIRLPOOL 7d68b3d578ade493588f05c3e754d7d347eb89facd551a41b1de86f1ceccbbb75b4b9cfb2e2686abe7262114ad2a1803c64c66577ee2b6bdaa26b5eaf6522fd9
+EBUILD sqlite-3.8.7.1.ebuild 5143 SHA256 75319a06343c56d6fbc51b24d8ffa0a1947bf11b39ed2b689e5e55963df22afc SHA512 7f93255dd479b97558eeb1aa4e952cc6f8c64805888d4bc2a5e1b6d09c490db99e02fb5f3230851e1df693dfa1b1e322ae34150bb563436846ca9140e07c7d48 WHIRLPOOL 74e2ed238d93399eaf82dd51d222d3a805e3fa43479b7a672d41810caef40360191615ae2139d52b6d3d601545549b3ec2dc495c76257e479cfef4e736674737
 EBUILD sqlite-3.8.7.ebuild 5141 SHA256 6a5173c882ac0ab24051bbd3ef2e09947bd67e53f5a2f62555150df9be45feb3 SHA512 dc9af3dd4fe32125f4c20e13a29e2475a16e28ffe62ce5392682e7606310028f23071eed3358c0f018d86a85f686134d54c3410999f40749ed5a60bf347ce3e8 WHIRLPOOL 4c9df34422b1d200300415d9d17b0c162687250710f2194ca3be4ce17280707dbcb8e212747cf648d16506925ece1f23e5612a978b3ed70619a5ac8574ca17a5
-MISC ChangeLog 71714 SHA256 4bf7b070f84233a6ac38dcdfba5f4b615e4921fc6aa8a934a24a737dd3753150 SHA512 5465637b72202209e6e9b794db2c0df39a33151955de543af1112d8ba14cf0952ce0a8a641edc788f039dd245e8681887338f5d68d0328ff0e120f77998d8ba2 WHIRLPOOL 325ee2ff3c509e65228b10f217d6272fb8e60284ff7d8218f90aae0fc2f1e7092a148c9b51e075fa2f453e7e9e73289c104d80c17353c0acdecfd40895515e50
+MISC ChangeLog 71859 SHA256 56b1493cf2a21b8f752f59fc1024e5b0a4933630653a3fa07450ca3b4cc6ff80 SHA512 b38daf208ea9ac55c36378b6cfdb6a83e3ea92f92a097bc7ba6b19cbc70f25c3e30c6ff100ff31f5104a2cef1c2b32f792ff01ca3ffdcba43478809002bd0c78 WHIRLPOOL aa59e863772e92f2317cc4b56106fd2b63826dd98fc759ebacbe16a2ed55b2add7dab90990115d69e77f9160458946ad96e313c2325acfae779451924c3bcf8b
 MISC metadata.xml 543 SHA256 571057e6088209739a504dfe989b27dc875b6b3f7129c31d9789a6bf765ea97b SHA512 7c1b05707f92a0540bed3cf04d3e468a330a626a7bbbbbece43ba231cc3f8f14af9d220b345c72db9acf33e8eb3d983980113a780ba5a778ebab774d19c659a1 WHIRLPOOL 6c22bbeb965522912ebb10d1f84cd0900ee934d9d41052ecc22902b5aada7d057defa0e4c89850e3f92a6c96d38d701e4dd76e52e27d3807d67d08aa0cd23aed
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUVfCsAAoJELp701BxlEWfKeIQAL5qttVUCpUIsigFsuF6xi+M
-+VWhfBMyJE6AxFOOd4hjBXkad4ZkbWlKGJ4yCT0nWSrfwuTO05mlgyRyIJGalqMA
-+wOWCPf5nuirHF/94QoSb7bOXwmkWE2R13/iIiZrokY0LhHWdH0z7Purb30gk6x2
-dNKLIEz7woDQSKWGjJrpvhRfB0Xqko1wU2PpbjdqL0H88A0W7Fs1AcLYrIJtnmxe
-luI/yI0IgaqBNsHpXiKlyIoA/w12HjFKgQ2zYpYNZYEGDnErAImv55SSjarXmgr7
-w+HMWQ6ryyQY5c2Bd+2dktbVFON+2Bt/tSVSnWxlfS2BYJLhoFrmnjmzhEIBvCeG
-get16PXbHrYKZwO7ImwsS9tT76FLWD+oWmL45nPd0Z759U9dokyuE7/t/AdiZBYM
-avTx74mVy8iSgYdjDRtsQSjH/FtlxfBpfqO7YYNyvmXX6GpEDJJaH3rG/HZGLht5
-7wJzz4zRktOtpvAVIzTefEGTDlziFiHyUcPoF1C1OA76EPhv+nbxe9VSZgVbxTqN
-nS6oeVhIi3TLlAIZqxB2XT9SQG8nkqZak38TWFYRkMuFxWX+99m9vGwIJ9YKjD8O
-GNSZJZ0K1CbJ1K2aVZzwTpQleRO/iM0r/KKQqSqFTyV4XZ6eaQGypnx9XQK0hrCn
-a+hfsOQBIkhR07/oabbu
-=RxvR
+iF4EAREIAAYFAlRZobYACgkQC77qH+pIQ6SEuAD+NBaZ450FW5Ber+VktLtp3omg
+cdgcvlWN/w0nncH5YqoA/Ra2iy/KNtmwpenoKl3xgGfHddEWEjKPSEtow/2ZqQMV
+=OiK9
 -----END PGP SIGNATURE-----
