@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.537 2014/11/02 08:51:55 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.538 2014/11/05 04:04:05 floppym Exp $
+
+*sqlite-3.8.7.1 (05 Nov 2014)
+
+  05 Nov 2014; Mike Gilbert <floppym@gentoo.org> +sqlite-3.8.7.1.ebuild:
+  Version bump. Ebuild by Arfrever.
 
   02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> sqlite-3.8.6.ebuild:
   Stable for alpha, wrt bug #523484
